[bdist_wheel]
universal=1

[metadata]
description-file = README.md
name = bulwark
author = Zax Rosenberg
version = 0.4.1

[options.extras_require]
testing =
	pytest >= 3.5, !=3.7.3
	# pytest-checkdocs
	# pytest-flake8
	# pytest-black-multipy

docs =
	sphinx
	sphinx_rtd_theme
	jaraco.packaging >= 3.2
	# rst.linker >= 1.9